# gmso

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Dockerfile  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  codecov.yml  environment-dev.yml  environment-latest.yml  environment.yml  history.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/workflows/: CI.yaml  codeql.yml
devtools/: docker-entrypoint.sh
docs/: conf.py  contributing.rst  data_structures.rst  design_principles.rst  docker.rst  docs-env.yml  external.rst  forcefield.rst  formats.rst  index.rst  installation.rst  potential_templates.rst  requirements.txt
docs/_templates/: footer.html
docs/api/: abstract_classes.rst  core_classes.rst  external.rst  formats.rst  index.rst  parameterization.rst  utils.rst
examples/: storing_expressions_with_sympy.ipynb  storing_units_with_unyt.ipynb
examples/argon/: ar.xml  argon.ipynb  argon_gromacs.ipynb  argon_lammps.ipynb  data.ar  em.mdp  env.txt  in.argon  nve.mdp
gmso/: __init__.py  exceptions.py
gmso/abc/: __init__.py  abstract_connection.py  abstract_potential.py  abstract_site.py  auto_doc.py  gmso_base.py  metadata.py  metadata_mixin.py  serialization_utils.py
gmso/atomtyping/: __init__.py  isomorph.py  parameterize.py
gmso/core/: __init__.py  angle.py  angle_type.py  atom.py  atom_type.py  bead.py  (+20 more)
paper/: paper.bib  paper.md
topology/: __init__.py  exceptions.py  test_box.py
(+376 files in other folders)
