[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gmso"
description = "A flexible storage of chemical topology for molecular simulation."
readme = "README.md"
authors = [
  {name = "Matthew W Thompson", email = "matt.thompson@vanderbilt.edu"},
  {name = "Justin Gilmer", email = "justin.b.gilmer@vanderbilt.edu"},
]
maintainers = [
  {name = "Nicholas Craven", email = "nicholas.c.craven@vanderbilt.edu"},
  {name = "Chris Jones", email = "chrisjones4@u.boisestate.edu"},
]
license= {text = "MIT"}
classifiers=[
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
urls = {Homepage = "https://github.com/mosdef-hub/gmso"}
requires-python = ">=3.9"
dynamic = ["version"]

[tool.setuptools]
zip-safe = false
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.dynamic]
version = {attr = "gmso.__version__"}
